--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,4 +5,10 @@
   <li>
     <%= link_to "Edit", edit_article_path(@article) %>
   </li>
+  <li>
+    <%= link_to 'Destroy', article_path(@article), method: :delete, data: { confirm: "Are you sure?" } %>
+  </li>
+  <li>
+    <%= link_to 'Back to Articles', articles_path %>
+  </li>
 </ul>
