--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -7,6 +7,7 @@
       <div><%= message %></div>
     <% end %>
   </div>
+
   <div>
     <%= form.label :body%>
     <%= form.text_area :body%>
@@ -15,6 +16,12 @@
       <div><%= message %></div>
     <% end %>
   </div>
+
+  <div>
+    <%= form.label :status %><br>
+    <%= form.select :status, ['public', 'private', 'archived'], selected: 'public' %>
+  </div>
+
   <div>
     <%= form.submit %>
   </div>
